Fix #22996 - Wrong clef when selecting standard staff type in instrument wizard.
In the instrument wizard, when a staff is changed to standard type (from a previous different type), the standard clef of the istrument is lost.

Changes:
- Added a member variable to `StaffListItem` storing the default standard clef for the instrument.
- Modified `instruments.xml' to remove &lt;clef&gt; tags from tablature instrument definitions: all these instruments are inited from a standard-staff main entry, recording the default standard clef; this clef is used to init the `StaffListItem::_defaultClef` member variable.

NOTE: Percussion instruments are not covered (an number of percussion instruments seem to have old-style definitions in `instruments.xml`); conversion from percussion to standard staff may yield unexpected results.

Former-commit-id: b8ecd4990556c341d73d33037e9d96f3de229912

--- a/share/templates/instruments.xml
+++ b/share/templates/instruments.xml
@@ -7935,7 +7935,7 @@
                   <description>Acoustic Nylon Strung Guitar (Tablature)</description>
                   <musicXMLid>pluck.guitar.nylon-string</musicXMLid>
                   <stafftype staffTypePreset="tab6StrCommon">tablature</stafftype>
-                  <clef>TAB</clef>
+<!--                  <clef>TAB</clef> -->
                   <genre>common</genre>
             </Instrument>
             <Instrument id="guitar-steel">
@@ -7968,7 +7968,7 @@
                   <description>Acoustic Steel Strung Guitar (Tablature)</description>
                   <musicXMLid>pluck.guitar.acoustic</musicXMLid>
                   <stafftype staffTypePreset="tab6StrCommon">tablature</stafftype>
-                  <clef>TAB</clef>
+<!--                  <clef>TAB</clef> -->
                   <genre>common</genre>
             </Instrument>
             <Instrument id="11-string-alto-guitar">
@@ -8043,7 +8043,7 @@
                   <init>electric-guitar</init>
                   <description>Electric Guitar (Tablature)</description>
                   <stafftype staffTypePreset="tab6StrCommon">tablature</stafftype>
-                  <clef>TAB</clef>
+<!--                  <clef>TAB</clef> -->
                   <genre>common</genre>
             </Instrument>
             <Instrument id="harp">
@@ -8108,7 +8108,7 @@
                   <description>Lute (Tablature)</description>
                   <musicXMLid>pluck.lute</musicXMLid>
                   <stafftype staffTypePreset="tab6StrFrench">tablature</stafftype>
-                  <clef>TAB</clef>
+<!--                  <clef>TAB</clef> -->
                   <genre>earlymusic</genre>
             </Instrument>
             <Instrument id="ren.-tenor-lute-5-course">
@@ -8488,7 +8488,7 @@
                   <description>Ukulele (4-str. TAB)</description>
                   <musicXMLid>pluck.ukulele</musicXMLid>
                   <stafftype staffTypePreset="tabUkulele">tablature</stafftype>
-                  <clef>TAB</clef>
+<!--                  <clef>TAB</clef> -->
             </Instrument>
             <Instrument id="tenor-ukulele">
                   <longName>Tenor Ukulele</longName>
@@ -8558,7 +8558,7 @@
                   <description>Bass Guitar (Tablature)</description>
                   <musicXMLid>pluck.bass</musicXMLid>
                   <stafftype staffTypePreset="tab4StrCommon">tablature</stafftype>
-                  <clef>TAB</clef>
+<!--                  <clef>TAB</clef> -->
                   <genre>common</genre>
             </Instrument>
             <Instrument id="acoustic-bass">
@@ -8604,7 +8604,7 @@
                   <description>Electric Bass (Tablature)</description>
                   <musicXMLid>pluck.bass.electric</musicXMLid>
                   <stafftype staffTypePreset="tab4StrCommon">tablature</stafftype>
-                  <clef>TAB</clef>
+<!--                  <clef>TAB</clef> -->
                   <genre>common</genre>
             </Instrument>
             <Instrument id="fretless-electric-bass">
@@ -8874,7 +8874,7 @@
                   <init>viola-da-gamba</init>
                   <description>Viola da gamba (Tablature)</description>
                   <stafftype staffTypePreset="tab6StrFrench">tablature</stafftype>
-                  <clef>TAB</clef>
+<!--                  <clef>TAB</clef> -->
                   <genre>earlymusic</genre>
             </Instrument>
             <!-- Viola da Gamba (6 string) removed as a duplication -->
