--- a/mscore/album.ui
+++ b/mscore/album.ui
@@ -2,6 +2,9 @@
 <ui version="4.0">
  <class>AlbumManager</class>
  <widget class="QDialog" name="AlbumManager">
+  <property name="windowModality">
+   <enum>Qt::ApplicationModal</enum>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -68,8 +71,7 @@
       </widget>
      </item>
      <item row="2" column="0" rowspan="5">
-      <widget class="QListWidget" name="scoreList">
-      </widget>
+      <widget class="QListWidget" name="scoreList"/>
      </item>
      <item row="3" column="1">
       <widget class="QPushButton" name="down">
@@ -114,7 +116,7 @@
         <string>Load an Existing Album</string>
        </property>
        <property name="text">
-         <string>Load</string>
+        <string>Load</string>
        </property>
       </widget>
      </item>
