--- a/mscore/editstaff.ui
+++ b/mscore/editstaff.ui
@@ -65,6 +65,9 @@
           <property name="text">
            <string>Part name:</string>
           </property>
+          <property name="textFormat">
+           <enum>Qt::PlainText</enum>
+          </property>
           <property name="buddy">
            <cstring>partName</cstring>
           </property>
@@ -74,6 +77,9 @@
          <widget class="QLabel" name="labelInstrName">
           <property name="text">
            <string>Instrument:</string>
+          </property>
+          <property name="textFormat">
+           <enum>Qt::PlainText</enum>
           </property>
           <property name="buddy">
            <cstring>instrumentName</cstring>
@@ -98,6 +104,9 @@
           <property name="text">
            <string>Long instrument name:</string>
           </property>
+          <property name="textFormat">
+           <enum>Qt::PlainText</enum>
+          </property>
           <property name="buddy">
            <cstring>longName</cstring>
           </property>
@@ -113,6 +122,9 @@
           </property>
           <property name="text">
            <string>Short instrument name:</string>
+          </property>
+          <property name="textFormat">
+           <enum>Qt::PlainText</enum>
           </property>
           <property name="buddy">
            <cstring>shortName</cstring>
@@ -160,6 +172,9 @@
         <property name="text">
          <string>Usable pitch range:</string>
         </property>
+        <property name="textFormat">
+         <enum>Qt::PlainText</enum>
+        </property>
        </widget>
       </item>
       <item>
@@ -168,6 +183,9 @@
          <widget class="QLabel" name="label_7">
           <property name="text">
            <string>Amateur:</string>
+          </property>
+          <property name="textFormat">
+           <enum>Qt::PlainText</enum>
           </property>
           <property name="buddy">
            <cstring>minPitchA</cstring>
@@ -235,6 +253,9 @@
           <property name="text">
            <string>Professional:</string>
           </property>
+          <property name="textFormat">
+           <enum>Qt::PlainText</enum>
+          </property>
           <property name="buddy">
            <cstring>minPitchP</cstring>
           </property>
@@ -298,6 +319,9 @@
          <widget class="QLabel" name="labelTransp">
           <property name="text">
            <string>Play transposition:</string>
+          </property>
+          <property name="textFormat">
+           <enum>Qt::PlainText</enum>
           </property>
           <property name="buddy">
            <cstring>iList</cstring>
@@ -449,6 +473,9 @@
           <property name="text">
            <string>+ Octave:</string>
           </property>
+          <property name="textFormat">
+           <enum>Qt::PlainText</enum>
+          </property>
           <property name="buddy">
            <cstring>octave</cstring>
           </property>
@@ -497,6 +524,9 @@
           <widget class="QLabel" name="labelNumOfStrings">
            <property name="text">
             <string>Number of strings:</string>
+           </property>
+           <property name="textFormat">
+            <enum>Qt::PlainText</enum>
            </property>
            <property name="buddy">
             <cstring>numOfStrings</cstring>
@@ -699,6 +729,9 @@
             <property name="text">
              <string>Lines:</string>
             </property>
+            <property name="textFormat">
+             <enum>Qt::PlainText</enum>
+            </property>
             <property name="buddy">
              <cstring>lines</cstring>
             </property>
@@ -724,6 +757,9 @@
            <widget class="QLabel" name="labelLineDist">
             <property name="text">
              <string>Line distance:</string>
+            </property>
+            <property name="textFormat">
+             <enum>Qt::PlainText</enum>
             </property>
             <property name="buddy">
              <cstring>lineDistance</cstring>
@@ -752,7 +788,10 @@
           <item row="2" column="0">
            <widget class="QLabel" name="labelExtraDist">
             <property name="text">
-             <string>Extra distance:</string>
+             <string>Extra distance above staff:</string>
+            </property>
+            <property name="textFormat">
+             <enum>Qt::PlainText</enum>
             </property>
             <property name="buddy">
              <cstring>spinExtraDistance</cstring>
